# entangled

./: .editorconfig  .gitignore  Entangled.doap  README.md  io.github.pbone64.Entangled.json  meson.build
app/: meson.build
app/data/: io.github.pbone64.Entangled.desktop.in  io.github.pbone64.Entangled.gschema.xml  io.github.pbone64.Entangled.metainfo.xml.in  meson.build
app/data/icons/: meson.build
app/po/: POTFILES  meson.build
app/src/: app_settings.vala  application.vala  config.h.in  entangled.gresource.xml  main.vala  meson.build
app/src/ui/: main-window.blp  main-window.vala
app/src/ui/devices/: dialog_add_device.blp  dialog_add_device.vala  page.blp  page.vala
app/src/ui/folders/: page.blp  page.vala
app/src/ui/preferences/: window.blp  window.vala
daemon/src/: application.vala  main.vala  meson.build  syncthing.vala
daemon/src/bus/: config.vala  web_api.vala
daemon/src/syncthing/: rest_client.vala
daemon/src/syncthing/config/: folder.vala
subprojects/: blueprint-compiler.wrap
